--- a/TraysFastUpdate/Components/Pages/CablePages/Index.razor
+++ b/TraysFastUpdate/Components/Pages/CablePages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/cabletypes"
+﻿@page "/cables"
 
 @using Microsoft.EntityFrameworkCore
 @using TraysFastUpdate.Components.Pages.Dialogs
@@ -7,27 +7,26 @@
 @using TraysFastUpdate.Services
 @using TraysFastUpdate.Services.Contracts
 
-@inject ICableTypeService CableTypeService
+@inject ICableService CableService
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
 
-<PageTitle>Index</PageTitle>
 
-<MudText Typo="Typo.h5" Class="d-flex justify-center flex-grow-1 gap-4">Cable Types</MudText>
+<MudText Typo="Typo.h5" Class="d-flex justify-center flex-grow-1 gap-4">Cables </MudText>
 
 <MudItem Class="d-flex justify-center align-stretch flex-grow-1 gap-4">
-    <MudButton Href="/cabletypes/create"
+    <MudButton Href="/cables/create"
                Rel="nofollow"
                Variant="Variant.Filled"
                Color="Color.Primary">
-        Add cable type
+        Add cable
     </MudButton>
     <MudFileUpload @ref="@_fileUpload" T="IBrowserFile" OnFilesChanged="UploadFile" Accept=".xlsx">
         <ActivatorContent>
             <MudButton Variant="Variant.Filled"
                        Color="Color.Primary"
                        StartIcon="@Icons.Material.Filled.CloudUpload">
-                Add cable types from file
+                Add cable from file
             </MudButton>
         </ActivatorContent>
     </MudFileUpload>
@@ -36,17 +35,18 @@
 <MudPaper Elevation="0" Class="pa-1 ma-2" Style="@($"background: #BDBDBD;")">
     @if (Elements == null || Elements.Count == 0)
     {
-        <MudAlert Severity="Severity.Info">No cables types found.</MudAlert>
+        <MudAlert Severity="Severity.Info">No cables found.</MudAlert>
     }
     else
     {
-        <MudDataGrid T="CableType" Items="@Elements" ReadOnly="false" EditMode="DataGridEditMode.Cell"
-                     Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick" Filterable="true" FilterMode="@DataGridFilterMode.ColumnFilterMenu" Virtualize="true" FixedHeader="true" CommittedItemChanges="@CommittedItemChanges">
+        <MudDataGrid T="Cable" Items="@Elements" ReadOnly="false" EditMode="DataGridEditMode.Cell"
+                     Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick" Filterable="true" FilterMode="@DataGridFilterMode.ColumnFilterMenu" Virtualize="true" FixedHeader="true" CommittedItemChanges="@CommittedItemChanges" ColumnResizeMode="ResizeMode.Column">
             <Columns>
-                <PropertyColumn Property="x => x.Type" Title="Cable Type" Hideable="false" />
-                <PropertyColumn Property="x => x.Purpose" Title="Cable Purpose" Hideable="false" />
-                <PropertyColumn Property="x => x.Diameter" Title="Cable Diameter [mm]" Hideable="false" />
-                <PropertyColumn Property="x => x.Weight" Title="Cable Weight [kg/m]" Hideable="false" />
+                <PropertyColumn Property="x => x.Tag" Title="Cable Tag" Hideable="false" />
+                <PropertyColumn Property="x => x.CableType.Type" Title="Cable Type" Hideable="false" />
+                <PropertyColumn Property="x => x.FromLocation" Title="Cable From Location" Hideable="false" />
+                <PropertyColumn Property="x => x.ToLocation" Title="Cable To Location" Hideable="false" />
+                <PropertyColumn Property="x => x.Routing" Title="Cable Routing" Hideable="false" />
                 <TemplateColumn Title="Actions" CellClass="d-flex justify-end" Sortable="false" Filterable="false" Editable="false">
                     <CellTemplate>
                         <MudTooltip Text="Delete">
@@ -56,14 +56,15 @@
                 </TemplateColumn>
             </Columns>
             <PagerContent>
-                <MudDataGridPager PageSizeOptions="[15, 25, 50]" T="CableType" />
+                <MudDataGridPager PageSizeOptions="[15, 25, 50]" T="Cable" />
             </PagerContent>
         </MudDataGrid>
     }
 </MudPaper>
 
+
 @code {
-    private List<CableType> Elements = new List<CableType>();
+    private List<Cable> Elements = new List<Cable>();
 
     private MudFileUpload<IBrowserFile> _fileUpload;
 
@@ -77,17 +78,16 @@
 
     private async Task ReloadDataAsync()
     {
-        Elements = await CableTypeService.GetCablesTypesAsync();
-        StateHasChanged();
+        Elements = await CableService.GetCablesAsync();
     }
 
     private async Task DeleteCableTypeAsync(int cableTypeId)
     {
         DialogParameters paremeters = new DialogParameters<DeleteDialog>
             {
-                { x => x.Title , "Delete Cable Type?" },
-                { x => x.Content, "Are you sure you want to delete this cable type?" },
-                { x => x.Result, "Cable type was deleted!" }
+                { x => x.Title , "Delete Cable?" },
+                { x => x.Content, "Are you sure you want to delete this cable?" },
+                { x => x.Result, "Cable was deleted!" }
             };
 
         var dialogResult = await DialogService.ShowAsync<DeleteDialog>("", paremeters);
@@ -95,22 +95,22 @@
 
         if (!result.Canceled)
         {
-            await CableTypeService.DeleteCableTypeAsync(cableTypeId);
+            await CableService.DeleteCableAsync(cableTypeId);
             await ReloadDataAsync();
         }
     }
 
-    private async Task CommittedItemChanges(CableType item)
+    private async Task CommittedItemChanges(Cable item)
     {
         Snackbar.Add("Cable type was updated!", Severity.Success);
-        await CableTypeService.UpdateCableTypeAsync(item);
+        await CableService.UpdateCableAsync(item);
     }
 
     private async Task UploadFile(InputFileChangeEventArgs e)
     {
         try
         {
-            await CableTypeService.UploadFromFileAsync(e.File);
+            await CableService.UploadFromFileAsync(e.File);
         }
         catch (Exception)
         {
@@ -122,4 +122,6 @@
             await ReloadDataAsync();
         }
     }
+
+
 }
