Cables table in Trays details vew is implemented

--- a/TraysFastUpdate/Components/Layout/MainLayout.razor
+++ b/TraysFastUpdate/Components/Layout/MainLayout.razor
@@ -23,6 +23,12 @@
                        Color="Color.Primary">
                 Cables
             </MudButton>
+            <MudButton Href="/trays"
+                       Rel="nofollow"
+                       Variant="Variant.Filled"
+                       Color="Color.Primary">
+                Trays
+            </MudButton>
         </MudItem>
         <MudSpacer />
         <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle" />
